--- a/index.html
+++ b/index.html
@@ -26,10 +26,29 @@
                 <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
                 <a href="#" class="hover:text-darkGrayishBlue">Community</a>
             </div>
+            <!-- Button -->
             <a href="#"
-                class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block ">Get
+                class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get
                 Started</a>
 
+            <!-- Hamburger Icon -->
+            <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+        </div>
+
+        <!-- Mobile Menu -->
+        <div class="md:hidden">
+            <div id="menu"
+                class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+                <a href="#">Pricing</a>
+                <a href="#">Product</a>
+                <a href="#">About Us</a>
+                <a href="#">Careers</a>
+                <a href="#">Community</a>
+            </div>
         </div>
     </nav>
 
@@ -74,103 +93,91 @@
                     teams.
                 </p>
             </div>
-            <!-- Flex container -->
-            <div class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row">
-                <!-- What's Different -->
-                <div class="flex flex-col space-y-12 md:w-1/2">
-                    <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
-                        What's different about Manage?
-                    </h2>
-                    <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
-                        Manage provides all the functionality your team needs, without the
-                        complexity. Our software is tailor-made for modern digital product
-                        teams.
-                    </p>
-                </div>
 
-                <!-- Numbered List -->
-                <div class="flex flex-col space-y-8 md:w-1/2">
-                    <!-- List Item 1 -->
-                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
-                        <!-- Heading -->
-                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
-                            <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
-                                    01
-                                </div>
-                                <h3 class="text-base font-bold md:mb-4 md:hidden">
-                                    Track company-wide progress
-                                </h3>
+            <!-- Numbered List -->
+            <div class="flex flex-col space-y-8 md:w-1/2">
+                <!-- List Item 1 -->
+                <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                    <!-- Heading -->
+                    <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                        <div class="flex items-center space-x-2">
+                            <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                01
                             </div>
-                        </div>
-
-                        <div>
-                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                            <h3 class="text-base font-bold md:mb-4 md:hidden">
                                 Track company-wide progress
                             </h3>
-                            <p class="text-darkGrayishBlue">
-                                See how your day-to-day tasks fit into the wider vision. Go from
-                                tracking progress at the milestone level all the way done to the
-                                smallest of details. Never lose sight of the bigger picture
-                                again.
-                            </p>
                         </div>
                     </div>
 
-                    <!-- List Item 2 -->
-                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
-                        <!-- Heading -->
-                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
-                            <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
-                                    02
-                                </div>
-                                <h3 class="text-base font-bold md:mb-4 md:hidden">
-                                    Advanced built-in reports
-                                </h3>
-                            </div>
-                        </div>
+                    <div>
+                        <h3 class="hidden mb-4 text-lg font-bold md:block">
+                            Track company-wide progress
+                        </h3>
+                        <p class="text-darkGrayishBlue">
+                            See how your day-to-day tasks fit into the wider vision. Go from
+                            tracking progress at the milestone level all the way done to the
+                            smallest of details. Never lose sight of the bigger picture
+                            again.
+                        </p>
+                    </div>
+                </div>
 
-                        <div>
-                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                <!-- List Item 2 -->
+                <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                    <!-- Heading -->
+                    <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                        <div class="flex items-center space-x-2">
+                            <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                02
+                            </div>
+                            <h3 class="text-base font-bold md:mb-4 md:hidden">
                                 Advanced built-in reports
                             </h3>
-                            <p class="text-darkGrayishBlue">
-                                Set internal delivery estimates and track progress toward
-                                company goals. Our customisable dashboard helps you build out
-                                the reports you need to keep key stakeholders informed.
-                            </p>
                         </div>
                     </div>
 
-                    <!-- List Item 3 -->
-                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
-                        <!-- Heading -->
-                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
-                            <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
-                                    03
-                                </div>
-                                <h3 class="text-base font-bold md:mb-4 md:hidden">
-                                    Everything you need in one place
-                                </h3>
-                            </div>
-                        </div>
+                    <div>
+                        <h3 class="hidden mb-4 text-lg font-bold md:block">
+                            Advanced built-in reports
+                        </h3>
+                        <p class="text-darkGrayishBlue">
+                            Set internal delivery estimates and track progress toward
+                            company goals. Our customisable dashboard helps you build out
+                            the reports you need to keep key stakeholders informed.
+                        </p>
+                    </div>
+                </div>
 
-                        <div>
-                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                <!-- List Item 3 -->
+                <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                    <!-- Heading -->
+                    <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                        <div class="flex items-center space-x-2">
+                            <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                03
+                            </div>
+                            <h3 class="text-base font-bold md:mb-4 md:hidden">
                                 Everything you need in one place
                             </h3>
-                            <p class="text-darkGrayishBlue">
-                                Stop jumping from one service to another to communicate, store
-                                files, track tasks and share documents. Manage offers an
-                                all-in-one team productivity solution.
-                            </p>
                         </div>
+                    </div>
+
+                    <div>
+                        <h3 class="hidden mb-4 text-lg font-bold md:block">
+                            Everything you need in one place
+                        </h3>
+                        <p class="text-darkGrayishBlue">
+                            Stop jumping from one service to another to communicate, store
+                            files, track tasks and share documents. Manage offers an
+                            all-in-one team productivity solution.
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
+
     <!-- Testimonials -->
     <section id="testimonials">
         <!-- Container to heading and testm blocks -->
@@ -222,6 +229,79 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-veryDarkBlue">
+        <!-- Flex Container -->
+        <div
+            class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+            <!-- Logo and social links container -->
+            <div
+                class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+                <div class="mx-auto my-6 text-center text-white md:hidden">
+                    Copyright &copy; 2022, All Rights Reserved
+                </div>
+                <!-- Logo -->
+                <div>
+                    <img src="img/logo-white.svg" class="h-8" alt="" />
+                </div>
+                <!-- Social Links Container -->
+                <div class="flex justify-center space-x-4">
+                    <!-- Link 1 -->
+                    <a href="#">
+                        <img src="img/icon-facebook.svg" alt="" class="h-8" />
+                    </a>
+                    <!-- Link 2 -->
+                    <a href="#">
+                        <img src="img/icon-youtube.svg" alt="" class="h-8" />
+                    </a>
+                    <!-- Link 3 -->
+                    <a href="#">
+                        <img src="img/icon-twitter.svg" alt="" class="h-8" />
+                    </a>
+                    <!-- Link 4 -->
+                    <a href="#">
+                        <img src="img/icon-pinterest.svg" alt="" class="h-8" />
+                    </a>
+                    <!-- Link 5 -->
+                    <a href="#">
+                        <img src="img/icon-instagram.svg" alt="" class="h-8" />
+                    </a>
+                </div>
+            </div>
+            <!-- List Container -->
+            <div class="flex justify-around space-x-32">
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Home</a>
+                    <a href="#" class="hover:text-brightRed">Pricing</a>
+                    <a href="#" class="hover:text-brightRed">Products</a>
+                    <a href="#" class="hover:text-brightRed">About</a>
+                </div>
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="#" class="hover:text-brightRed">Careers</a>
+                    <a href="#" class="hover:text-brightRed">Community</a>
+                    <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+                </div>
+            </div>
+
+            <!-- Input Container -->
+            <div class="flex flex-col justify-between">
+                <form>
+                    <div class="flex space-x-3">
+                        <input type="text" class="flex-1 px-4 rounded-full focus:outline-none"
+                            placeholder="Updated in your inbox" />
+                        <button
+                            class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">
+                            Go
+                        </button>
+                    </div>
+                </form>
+                <div class="hidden text-white md:block">
+                    Copyright &copy; 2022, All Rights Reserved
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
